feat(user): introduce Spring Data JPA for User persistence and migrate UserRepository to JPA
* Added UserEntity mapped to app_user table
* Replaced JDBC-based UserRepository with Spring Data JPA repository
* Added mapping helpers between UserEntity and existing User record
* Updated BackendApiApplication to enable JPA repositories and entity scanning
* Removed custom JDBC code and row mappers previously used for user lookups
* Updated controllers/services to inject the new JPA-based UserRepository